<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo_amazon"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo_amazon"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/img_logo_amazon"
        app:layout_constraintStart_toEndOf="@id/line1" />
    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleEmail"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@id/line1"
        app:layout_constraintTop_toBottomOf="@id/title"
        />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,VisualLintTextFieldSize" />
    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/line1"
        app:layout_constraintTop_toBottomOf="@id/et_email"/>
    <TextView
        android:id="@+id/text_btn_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetPassword"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/blueLightAmazon"
        app:layout_constraintEnd_toStartOf="@id/line2"
        app:layout_constraintTop_toBottomOf="@id/et_email"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_password"
        tools:ignore="Autofill,DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />
    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/yellowAmazon"
        android:text="@string/title"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />
    <TextView
        android:id="@+id/text_description_conditionsUse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="16sp"
        android:text="@string/informationAcceptConditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signIn"
        tools:ignore="VisualLintLongText" />
    <CheckBox
        android:id="@+id/checkBox_keepSigned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:text="@string/checkKeepMeSinged"
        app:layout_constraintStart_toEndOf="@id/line1"
        app:layout_constraintTop_toBottomOf="@id/text_description_conditionsUse"/>
    <TextView
        android:id="@+id/text_newToAmazon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/areYouNewToAmazon"
        android:textAlignment="center"
        android:textColor="@color/greyAmazon"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_keepSigned"/>
    <Button
        android:id="@+id/btn_createdAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCreateAccount"
        android:backgroundTint="@color/whiteAmazon"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_newToAmazon"
        tools:ignore="VisualLintButtonSize" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>
